--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,16 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = nbdev_qq_test
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
+user = qiz5
+description = nbdev test project
+keywords = nbdev
+author = charles
+author_email = qiz5@hotmail.com
 # copyright = Put your copyright information here
 branch = {branch}
 version = 0.0.1
