--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ description = nbdev test project
 keywords = nbdev
 author = charles
 author_email = qiz5@hotmail.com
-# copyright = Put your copyright information here
+copyright = original aquacrop copyright
 branch = {branch}
 version = 0.0.1
 min_python = 3.6
@@ -37,7 +37,7 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Whether to look for library notebooks recursively in the `nbs_path` dir
